srcs/grafana.yaml

apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana
spec:
  ports:
    - name: grafana
      port: 3000
      targetPort: 80
  selector:
    app: grafana
    tier: frontend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
        tier: frontend
    spec:
      containers:
      - image: docker.io/grafana/grafana:5.3.2
        name: grafana
        ports:
        - containerPort: 3000
          name: grafana
        volumeMounts:
        - name: gf-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: gf-persistent-storage
        persistentVolumeClaim:
          claimName: gf-pv-claim
