srcs/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  labels:
    app: grafana
spec:
  ports:
    - port: 8086
  selector:
    app: grafana
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: docker.io/influxdb:1.6.4
        imagePullPolicy: IfNotPresent
        name: influxdb
        ports:
        - containerPort: 8086
          name: influxdb
        volumeMounts:
        - name: idb-persistent-storage
          mountPath: /var/lib/influxdb
      volumes:
      - name: idb-persistent-storage
        persistentVolumeClaim:
          claimName: idb-pv-claim
