srcs/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
#            - containerPort: 443
          volumeMounts:
            - name: nginx-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-volume
          configMap:
            name: nginx-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      protocol: TCP
#    - port: 443
 #     name: https
  #    protocol: TCP
  selector:
    app: nginx
