srcs/wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: nfs-volume
          mountPath: /var/www/html
      volumes:
      - name: nfs-volume
        persistentVolumeClaim:
          claimName: nfs-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  type: ClusterIP
  #type: LoadBalancer
  ports:
    - port: 5050
  selector:
    app: wordpress
